--- a/index.html
+++ b/index.html
@@ -46,16 +46,28 @@
 					<div class="item">
 		            <div class="meta-info">
 		                <div class="upper-row">
-		                    <h3 class="job-title">Data Science Consultant</h3>
-		                    <div class="time">Jan 2020 - Present</div><!--/time-->
+		                    <h3 class="job-title">Data Scientist</h3><!--/time-->
+		                    <div class="time">Mar 2021 - Present</div><!--/time-->
 		                </div><!--/upper-row-->
-		                <div class="company">Ordina, Utrecht area</div><!--/company-->
-		                <div class="timeMobile">Jan 2020 - Present</div><!--/timeMobile-->
+		                <div class="company">HumanTotalCare, Utrecht area</div><!--/company-->
+		                <div class="timeMobile">Mar 2021 - Present</div><!--/timeMobile-->
 		            </div><!--/meta-info-->
 		            <div class="details">
-		                <p>As a Data Science Consultant I find my greatest pleasure in answering questions and solving problems through state-of-the-art analysis techniques used on complex datasets. I strive to have a concrete and positive impact on my client's processes. To achieve this, a thorough preparation and careful work ethic are of paramount importance to me. I am always eager to learn, so I am always on the lookout to learn new (analysis) techniques and become more efficient in applying the techniques I know.
-		                <br><br>
-						I have been involved in an internal project where I was responsible for a business case and textmining. Currently I provide a Data Science curriculum for GO Opleidingen, an institute that provides training for information professionals, and am deployed as a Senior Data-Analyst at Achmea, one of the largest insurance companies in the Netherlands.
+		                <p>As a Data Scientist at the Research & Development department of HumanTotalCare I create data-driven applications to help our occupational health experts provide the best prevention and care programs for our customers.
+		                </p>
+		            </div><!--/details-->
+					</div><!--/item-->
+					<div class="item">
+		            <div class="meta-info">
+		                <div class="upper-row">
+		                    <h3 class="job-title">Data Science Consultant</h3>
+		                    <div class="time">Jan 2020 - Feb 2021</div><!--/time-->
+		                </div><!--/upper-row-->
+		                <div class="company">Ordina, Utrecht area</div><!--/company-->
+		                <div class="timeMobile">Jan 2020 - Feb 2021</div><!--/timeMobile-->
+		            </div><!--/meta-info-->
+		            <div class="details">
+		                <p>As a Data Science Consultant I have been involved in an internal project where I was responsible for a business case and textmining. I have provided a Data Science curriculum for GO Opleidingen, an institute that provides training for information professionals, and was deployed as a Senior Data-Analyst at Achmea, one of the largest insurance companies in the Netherlands.
 		                </p>
 		            </div><!--/details-->
 					</div><!--/item-->
@@ -119,14 +131,13 @@
 									<li class="skill"><div class="text">R</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Expert</div></li>
 									<li class="skill"><div class="text">Analysis of Variance</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Expert</div></li>
 									<li class="skill"><div class="text">Regression</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Expert</div></li>
+									<li class="skill"><div class="text">Machine Learning</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Expert</div></li>
 									<li class="skill"><div class="text">Psychometric Analysis</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Expert</div></li>
 									<li class="skill"><div class="text">Mixed-effect Models</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></div><div class="mastery">Expert</div></li>
 									<li class="skill"><div class="text">MySQL</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Proficient</div></li>
 									<li class="skill"><div class="text">Simulation Studies</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Proficient</div></li>
 									<li class="skill"><div class="text">Python</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Proficient</div></li>
 									<li class="skill"><div class="text">Bayesian Statistics</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Competent</div></li>
-									<li class="skill"><div class="text">Matlab</div><div class="stars"><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i><i class="fa fa-star-o" aria-hidden="true"></i></div><div class="mastery">Competent</div></li>
-
 							</ul><!--/skills-->
 							</div><!--/skills-container-->
 						</div><!--/portfolio-div1-->
@@ -180,7 +191,7 @@
 							</div><!--/skills-container-->
 						</div><!--/portfolio-div2-->
 						<div class="mydivhide portfolio3">
-							<p class="portfolio-text">Am I a developer? Not really, but I enjoy coding! I started coding in Python to set up behavioural experiments, as well as coding in R for data-analyses. Because I enjoy this kind of coding, I delved back into HTML and CSS (which I hadn't touched since I was 15) to build this website. I'm looking to keep creating small coding projects in my free time (which is very sparse as a PhD student).</p>
+							<p class="portfolio-text">Am I a developer? Not really, but I enjoy coding! I started coding in Python to set up behavioural experiments, as well as coding in R for data-analyses. Because I enjoy this kind of coding, I delved back into HTML and CSS (which I hadn't touched since I was 15) to build this website. I'm looking to keep creating small coding projects in my free time.</p>
 							<div class="skills-container">
 								<h2 class="portfolio-title">Skills</h2>
 								<ul class="skills">
